--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1 style="color: darkmagenta;"> <span>&#128148;</span> SUPER SITE WEB</h1>
+        <h1> <span>&#128148;</span> SUPER SITE WEB</h1>
     </header>
     <section>
         <div>
